Version TBA

 * Permit trailing commas in template enum definitions (#216).

 * Add overwrite/insert toggle to "Fill range" dialog (#213).

 * Add copy/export context menu commands to strings tool (#210).

 * Fix temporary hang in strings tool when processing large files (#217).

 * Fix settings not being saved during application exit.

Version 0.60.1 (2023-07-28)

 * Install missing parts of binary template plugin.

Version 0.60.0 (2023-07-28)

 * Add data histogram tool (#140).

 * Use virtual offsets in "Select range" dialog.

 * Don't re-open files to save when there are no changes (#193).

 * Remember recently selected templates (#183).

 * Fix crash when running rehex for the first time on some systems (#194).

 * Correctly draw insert cursor over highlighted data and at the end of the
   file (#196).

 * Fix true/false not being usable inside template functions/structs (#197).

 * Expose current array index as ArrayIndex when expanding arrays of structs
   in templates (#191).

 * Implement lexical variable scoping in templates and allow functions to
   access global variables defined above them (#190).

 * Add <charset = "XXX"> syntax to templates (#184).

 * Add character set option to text search (#182, #200).

 * Add "Delete comment and children" context menu command to delete a comment
   and any comments encapsulated by it (#198).

 * Add "Apply template from cursor" option to binary template tool.

 * Fix cases where the strings tool would appear to run forever with an empty
   file.

 * Remove strings from the strings panel when they are deleted from the file.

 * Add new ReadString(), SPrintf(), SetComment(), StringLengthBytes(),
   ArrayPush(), ArrayPop() and OffsetOf() template function.

 * Fix repeated execution of the same switch() block in a template (#202).

 * Monitor for open files being externally modified and allow reloading (#124).

 * Add 'private' variables to template language.
