@@ -10,6 +10,8 @@ Version TBA
 
  * Fix settings not being saved during application exit.
 
+ * Batch comments panel updates to improve responsiveness (#205).
+
 Version 0.60.1 (2023-07-28)
 
  * Install missing parts of binary template plugin.
